--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ beautifulsoup4==4.12.3
 certifi==2024.6.2
 charset-normalizer==3.3.2
 deprecation==2.1.0
+dj-database-url==2.2.0
 Django==5.0.6
 gotrue==2.6.1
 h11==0.14.0
@@ -20,6 +21,7 @@ psycopg2-binary==2.9.9
 pydantic==2.8.2
 pydantic_core==2.20.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 realtime==1.0.6
 requests==2.32.3
 six==1.16.0
