--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ certifi==2024.6.2
 charset-normalizer==3.3.2
 deprecation==2.1.0
 dj-database-url==2.2.0
-Django==5.0.6
+Django
 gotrue==2.6.1
 h11==0.14.0
 h2==4.1.0
