--- a/vercel.json
+++ b/vercel.json
@@ -23,5 +23,6 @@
         "src": "/(.*)",
         "dest": "moviedatabase/wsgi.py"
       }
-    ]
+    ],
+    "buildCommand": "python manage.py migrate"
   }
