--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 DB_NAME=postgres
-DB_USER=postgres.byiujwfytabwxbtekocs
-DB_PASSWORD=RMZ0bphUBdbBviN8
-DB_HOST=aws-0-ap-southeast-1.pooler.supabase.com
+DB_USER=postgres.wwvqkcairszlzbkopksj
+DB_PASSWORD=Edd8zoHCQBO7CaoD
+DB_HOST=aws-0-us-west-1.pooler.supabase.com
 DB_PORT=6543
 #user=postgres.byiujwfytabwxbtekocs password=[YOUR-PASSWORD] host=aws-0-ap-southeast-1.pooler.supabase.com port=6543 dbname=postgres
+#user=postgres.wwvqkcairszlzbkopksj password=[YOUR-PASSWORD] host=aws-0-us-west-1.pooler.supabase.com port=6543 dbname=postgres
