--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 
-DATABASE_URL=postgresql://postgres.wwvqkcairszlzbkopksj:Edd8zoHCQBO7CaoD@aws-0-us-west-1.pooler.supabase.com:6543/postgres
+DATABASE_URL=postgresql://postgres:Nikki2022@@db.sdqarqsdcufnjmruolai.supabase.co:5432/postgres
