--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2024.6.2
 charset-normalizer==3.3.2
 deprecation==2.1.0
 dj-database-url==2.2.0
+django-cors-headers==4.3.1
 Django
 gotrue==2.6.1
 gunicorn==20.1.0
